# prism

./: README.md
.claude-plugin/: marketplace.json
plugins/profile-loop/: .mcp.json  CONCEPT.md  LICENSE  README.md  pyproject.toml
plugins/profile-loop/.claude-plugin/: plugin.json
plugins/profile-loop/commands/: init.md  observe.md  profile.md  review.md  status.md  validate.md
plugins/profile-loop/profile_loop_mcp/: __init__.py  buffer.py  diff.py  evaluator.py  judge.py  server.py  signals.py  store.py  transcripts.py
plugins/profile-loop/scripts/: distill_judge.py
plugins/profile-loop/skills/profile-loop/: SKILL.md
plugins/profile-loop/tests/: conftest.py  test_buffer.py  test_diff_eval.py  test_local_judge.py  test_signals.py  test_transcripts.py
